--- a/API-Demo/Base.lproj/Main.storyboard
+++ b/API-Demo/Base.lproj/Main.storyboard
@@ -38,6 +38,40 @@
             </objects>
             <point key="canvasLocation" x="-197" y="78"/>
         </scene>
+        <!--Second View Controller-->
+        <scene sceneID="GHg-sQ-8ME">
+            <objects>
+                <viewController id="q6e-em-Kpv" customClass="SecondViewController" customModule="API_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="59G-qg-YJg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rsx-qK-Evu">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="jVf-WO-Etd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rsx-qK-Evu" firstAttribute="leading" secondItem="jVf-WO-Etd" secondAttribute="leading" id="GU5-Ye-snS"/>
+                            <constraint firstItem="rsx-qK-Evu" firstAttribute="top" secondItem="jVf-WO-Etd" secondAttribute="top" id="HOO-Rr-rgA"/>
+                            <constraint firstItem="jVf-WO-Etd" firstAttribute="trailing" secondItem="rsx-qK-Evu" secondAttribute="trailing" id="S05-lf-Zrz"/>
+                            <constraint firstItem="jVf-WO-Etd" firstAttribute="bottom" secondItem="rsx-qK-Evu" secondAttribute="bottom" id="TfT-Wa-F88"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="rsx-qK-Evu" id="Rdv-8q-cza"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bo3-2m-TBT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="767" y="78"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
